# Kruboo2

./: README.md
backend/: __init__.py  pyinstaller.spec  pyproject.toml  requirements.txt
backend/config/: __init__.py  default.yaml
backend/scripts/: setup.py
backend/src/: main.py
backend/src/ai/: __init__.py  anthropic_client.py  deepseek_client.py  local_llama.py  model_manager.py  openai_client.py
backend/src/api/: fastapi_app.py
backend/src/api/routes/: voice.py
backend/src/auth/: __init__.py  authentication.py  social_auth.py  wallet_auth.py
backend/src/blockchain/: __init__.py  decentralized_storage.py  did_manager.py  wallet_integration.py
backend/src/core/: __init__.py  assistant_core.py
backend/src/database/: __init__.py  models.py
backend/src/system/: __init__.py  app_controller.py  automation_engine.py  file_manager.py  system_monitor.py
backend/src/voice/: __init__.py  speech_to_text.py  text_to_speech.py  wake_word_detector.py
backend/src/web/: __init__.py  browser_automation.py  research_assistant.py  search_engine.py
frontend/: electron-builder.json  package.json  tailwind.config.js
frontend/electron/: ipcHandlers.js  main.js  preload.js
frontend/scripts/: build.js
frontend/src/: App.jsx
frontend/src/hooks/: useAIModels.js  useBlockchain.js  useSystemIntegration.js  useVoiceRecognition.js
frontend/src/setup/: LanguageSetup.jsx
frontend/src/stores/: aiStore.js  authStore.js  configStore.js  voiceStore.js
frontend/src/styles/: globals.css
frontend/src/utils/: auth.js  blockchain.js  fileSystem.js  voice.js
(+16 files in other folders)
