[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant-backend"
version = "1.0.0"
description = "Privacy-first AI Assistant Backend"
authors = [
    {name = "AI Assistant Team", email = "dev@aiassistant.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "openai>=1.3.0",
    "anthropic>=0.7.4",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "web3>=6.11.0",
    "psutil>=5.9.6",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]
